--- a/product-list.html
+++ b/product-list.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>đây là ds sản phẩm</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et saepe iusto vero eos accusamus laborum? Iure voluptatibus, doloribus exercitationem consequatur placeat ipsum, accusantium nesciunt unde optio eos asperiores fuga porro?</p>
 </body>
 </html>
